貸出可能書籍表示機能の実装完了しました。

--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -195,7 +195,7 @@ img.book_noimg, img.book_img{
 }
 
 
-a.btn_add_book,a.btn_bulk_book, button.btn_addBook,button.btn_editBook, button.btn_deleteBook,button.btn_rentBook,button.btn_returnBook,button.btn_bulkRegist {
+a.btn_add_book,a.btn_bulk_book,a.btn_rent_ok_book, button.btn_addBook,button.btn_editBook, button.btn_deleteBook,button.btn_rentBook,button.btn_returnBook,button.btn_bulkRegist {
     display: inline-block;
     font-size: 16px;
     font-weight: bold;
@@ -211,6 +211,9 @@ a.btn_add_book,a.btn_bulk_book, button.btn_addBook,button.btn_editBook, button.b
 }
 a.btn_bulk_book{
 	background-color: #66cdaa;
+}
+a.btn_rent_ok_book{
+	background-color: #a27ef7;
 }
 button.btn_editBook{
     background-color: #9ec34b;
